Day 3: Add core CSS styling with reusable components

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="style.css">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PORTFOLIO</title>
 </head>    
 <body bgcolor="lightblue">
-">
-    <HEADER ALIGN="CENTER">
-    <h1>DAKSH PARAKH  </h1>
-    <h3>STUDENT | WEB DEVELOPER | PROGRAMMER</h3>
-    </HEADER>
-<MAIN>
+    <header class="site-header">
+    <h1>Daksh Parakh</h1>
+    <h3>Student | Web Developer | Programmer</h3>
+
+    <nav class="nav-bar">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+    </nav>
+</header>
+
+<MAIN CLASS="container">
     <img src='photo.jpg' alt='MY PHOTO' width='120'align='right'align='top'>
      <P> MY NAME IS DAKSH PARAKH. I STUDY IN NIT RAIPUR AND THERE I AM PURSUING B.TECH IN INFORMATION TECHNOLOGY.CURRENTLY I AM IN THE 1ST YEAR AND I WILL BE GRADUATED BY 2029.</P>
     <BR >
-
-    <NAV align="center">
-        <a href="index.html" color="white">HOME</a> |
-        <a href="about.html" color="white">ABOUT</a> 
-    </NAV>
     <ul>
         <li>TECNICAL SKILLS:
             <ol>
@@ -56,11 +57,13 @@
     <blockquote  align="center">
   <pre><b><big>“ONE MACHINE CAN DO THE WORK OF 50 ORDINARY MEN.
     NO MACHINE CAN DO THE WORK OF ONE EXTRAORDINARY MAN.”</big></b></pre>
-  <cite>ELBERT HUBBARD</cite>
+  <cite>ELBERT HUBBARD</cite><br>
+  <a href="about.html" class="btn">Know More</a>
+
 </blockquote>
 
 </MAIN>
-<footer ALIGN="CENTER">
+<footer class="site-footer">
     <p>CONTACT ME :- PHONE:8770997551  | EMAIL:dakshparakh02@gmail.com</p>
 </footer>
 </body>
